--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,23 @@
+@Manual{dplyr,
+   title = {dplyr: A Grammar of Data Manipulation},
+   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+   year = {2023},
+   note = {R package version 1.1.4},
+   url = {https://CRAN.R-project.org/package=dplyr},
+   doi = {10.32614/CRAN.package.dplyr},
+ }
+
+@Article{tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+
 @Article{multiverse,
     title = {multiverse: Multiplexing Alternative Data Analyses in R Notebooks (Version 0.6.2)},
     author = {Abhraneel Sarma and Alex Kale and Michael Moon and Nathan Taback and Fanny Chevalier and Jessica Hullman and Matthew Kay},
@@ -812,4 +832,24 @@ PMID: 17989204},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.2681},
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.2681},
 	langid = {en}
+}
+
+@article{chen2025,
+	title = {Unleashing the potential of prompt engineering for large language models},
+	author = {Chen, Banghao and Zhang, Zhaofeng and {Langrené}, Nicolas and Zhu, Shengxin},
+	year = {2025},
+	month = {06},
+	date = {2025-06-13},
+	journal = {Patterns},
+	pages = {101260},
+	volume = {6},
+	number = {6},
+	doi = {10.1016/j.patter.2025.101260},
+	url = {https://www.sciencedirect.com/science/article/pii/S2666389925001084}
+}
+
+@article{xu,
+	title = {Large Language Models for Generative Information Extraction: A Survey},
+	author = {Xu, Derong and Chen, Wei and Peng, Wenjun and Zhang, Chao and Xu, Tong and Zhao, Xiangyu and Wu, Xian and Zheng, Yefeng and Wang, Yang and Chen, Enhong},
+	doi = {10.48550/arXiv.2312.17617}
 }
